# mch-summer-school

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchDusk.cmake  FetchGoogleTest.cmake  FindNetCDF.cmake
cpp_drivers/: CMakeLists.txt  UnstructuredVerifier.h  divergence_driver.cpp  nh_diffusion_fvm_driver.cpp
docker/: Dockerfile  docker-install-spack.sh
dusk_stencils/: CMakeLists.txt  divergence.py  nh_diffusion_fvm.py
scripts/: calldusk.sh.in
wrappers/: divergence_cuda_wrapper.cpp  divergence_cxx-naive_wrapper.cpp  divergence_wrapper.h  nh_diffusion_fvm_cuda_wrapper.cpp  nh_diffusion_fvm_cxx-naive_wrapper.cpp  nh_diffusion_fvm_wrapper.h
